2006-10-16  Jeff Johnston  <jjohnstn@redhat.com>
 
	* linux-thread-db.c (thread_db_wait): Don't bother continuing if
	the wait result indicates the program terminated with a
	signal (from gdb-6.3-ia64-sigill-20051115.patch, a patch for
	Fedora Core 5).
	
2006-10-11  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2read.c (dwarf_decode_lines): Call record_line upon
	encountering a different subfile.

2006-10-11  Denis Pilat  <denis.pilat@st.com>

	* tui/tui-source.c (tui_set_source_content): handle source 
	files that contain non unix end-of-line.
	
2006-10-10  Daniel Jacobowitz  <dan@codesourcery.com>

	* ser-mingw.c (free_pipe_state, pipe_wait_handle): Update
	for changes to pipe_select_thread.
	(pipe_done_wait_handle): New.
	(_initialize_ser_windows): Reference it.

2006-10-09  Jan Kratochvil  <jan.kratochvil@redhat.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (expprint.o, parse.o, target.o): Update.
	* dwarf2loc.c (dwarf_expr_tls_address): Move body to
	target_translate_tls_address.  Call it.
	* eval.c (evaluate_subexp_standard): Handle UNOP_MEMVAL_TLS.
	* expprint.c (print_subexp_standard): Likewise.
	(op_name_standard, dump_subexp_body_standard): Likewise.
	* expression.h (enum exp_opcode): Add UNOP_MEMVAL_TLS.
	(union exp_element): Add objfile.
	* parse.c (write_exp_elt_objfile): New function.
	(msym_tls_symbol_type): New.
	(write_exp_msymbol): Handle TLS.
	(operator_length_standard): Handle UNOP_MEMVAL_TLS.
	(build_parse): Initialize msym_tls_symbol_type.
	* parser-defs.h (write_exp_elt_objfile): New prototype.
	* target.c (target_translate_tls_address): New.
	* target.h (target_translate_tls_address): Add prototype.

2006-10-09  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* solib.c (solib_open): Handle an empty solib_absolute_prefix like a
	missing one.

2006-10-09  Daniel Jacobowitz  <dan@codesourcery.com>

	* solib.c (solib_read_symbols): Stop if the file was not found.

2006-10-09  Paul Pluzhnikov  <ppluzhnikov@charter.net>
